--- a/docs/towny-guide/mayor/03-tax-and-economy.mdx
+++ b/docs/towny-guide/mayor/03-tax-and-economy.mdx
@@ -1,13 +1,13 @@
 ---
 id: tax
 title: 开始收税与地皮经济（STEP3）
-slug: /towny-guide/tax
+slug: /towny-guide/mayor/tax
 sidebar_label: STEP3 税与经济
 ---
 
-## STEP3 宝典第三章 —— 哎呀！没钱啦！开始~~割韭菜~~！(#STEP3) <a id="STEP"></a>
+## STEP3 宝典第三章 —— 哎呀！没钱啦！开始~~割韭菜~~！ {#STEP3}
 
-### 开始收税！<a id="STEP3-tax"></a>
+### 开始收税！ {#STEP3-tax}
 
 > 你建了城后看着每日入不敷出的财政, 心里烦闷脑阔疼. 于是, 你又把"仙入"2213请来了.  
 > "呜呜呜, 仙入, 救救我吧, 我每天入不敷出了, 城镇要倒闭了qwqqq, 有什么办法救一下啊"  
@@ -25,7 +25,7 @@ sidebar_label: STEP3 税与经济
 我们使用 `/t toggle taxpercent on` 开启按照税率收税(如果你是个豪城长你开)
 使用 `/t set taxes <税率/价格>` 按照您设置的价格或税率来收税(还是那句话: 如果你是个豪城长你就按照税率收税)
 当然, 有的居民的地多, 有的地少, 那这种我们就可以使用 `/t set plottax <价格>` 来设置土地税, 按照居民拥有的土地数来收税.
-还记得在设置地皮类型的时候提到的[shop](/towny-guide/basics/plot-management#to_shop)吗? 您可以设置商店地皮税, 按照拥有的商店地皮来收税.
+还记得在设置地皮类型的时候提到的[shop](./plot-management#to_shop)吗? 您可以设置商店地皮税, 按照拥有的商店地皮来收税.
 
 ### 呜呜, 没钱了, 卖地皮吧qwqqq
 
@@ -34,7 +34,7 @@ sidebar_label: STEP3 税与经济
 
 您可以将一块地皮设置成任何价格, 只需 `/t set plotprice <价格>` 就可以设置辣.  
 当然, 上面的只是默认土地的价格, 您还可以设置商店地皮的价格 `/t set shopprice <价格>`.  
-当然之前提到的 [大使馆](/towny-guide/basics/plot-management#emb) 也是可以设置价格的, 使用 `/t set embassyprice <价格>` 来设置.  
+当然之前提到的 [大使馆](./plot-management#emb) 也是可以设置价格的, 使用 `/t set embassyprice <价格>` 来设置.  
 
   > 你卖完地皮后, 城镇的银行的钱已经到达了30000T, 你已经足够钱来买"南瓜之心"了.  
   > 那怎么从银行取钱呢? 很简单, 你只要...(咕噜咕噜).  
