--- a/docs/towny-guide/mayor/01-mayor-start.mdx
+++ b/docs/towny-guide/mayor/01-mayor-start.mdx
@@ -1,11 +1,11 @@
 ---
 id: mayor-start
 title: 镇长详细入门（STEP1 起家修炼）
-slug: /towny-guide/mayor-start
+slug: /towny-guide/mayor/mayor-start
 sidebar_label: STEP1 起家修炼
 ---
 
-## STEP1 宝典第一章 —— 起家修炼, 先立城镇 🏯 <a id="STEP1"></a>
+## STEP1 宝典第一章 —— 起家修炼, 先立城镇 🏯 {#STEP1}
 
 ---
 
@@ -20,16 +20,16 @@ sidebar_label: STEP1 起家修炼
 
 ---
 
-### 给你的城镇取一个响亮的名字(#STEP1-setName)
+### 给你的城镇取一个响亮的名字 {#STEP1-setName}
 
 使用 `/t create <城镇名>` 或 `/t new <城镇名>` ,然后`/confirm`确认一下就创建了一个新的城镇，`<城镇名>` 可自行决定，但请不要在名字中包含任何特殊字符，避免出现错误. ~~（把这个用 Fxxk2213 当名字的人踢了）~~
 
 <!-- ![CreateT](static/img/towny-guide/CreateT.gif) -->
 
-当然, 维护城镇是需要一些金毕的, 你需要使用 `/t deposit <MONEY>` 来将您的"金毕"放入您的城镇银行, 使您的城镇没那么快倒闭( 关于税收请查看 [开始收税!](/towny-guide/basics/tax#STEP3-tax) )
+当然, 维护城镇是需要一些金毕的, 你需要使用 `/t deposit <MONEY>` 来将您的"金毕"放入您的城镇银行, 使您的城镇没那么快倒闭( 关于税收请查看 [开始收税!](./tax) )
 
 您还可以使用 `/t claim` 认领一块新的地皮，将这块地皮纳入您的城镇（地皮需要挨着主地块）。
 
-### 招募居民 <a id="STEP1-res"></a>
+### 招募居民 {#STEP1-res}
 
 使用 `/t invite <玩家名>` 找一些志同道合的伙伴 ~~（或者是疯狂给你交税的富哥）~~
